libgphoto2 HEAD

Build system (packagers beware!):

   * You should generate HAL FDI, linux-hotplug usb.usermap, and udev rules
     now via our program:

 	  ${libdir}/print-camera-list (hal-fdi|usb-usermap|udev-rules)

     During a chrooted build you can use:
	CAMLIBS=$BUILDROOT/usr/lib/libgphoto2/2.2/ print-camera-list hal-fdi

     This obsoletes print-usb-usermap and print-udev-rules.

  The hal FDI file should be put into:
	/usr/share/hal/fdi/information/10freedesktop/10-camera-libgphoto2.fdi


  If you need to generate different stuff based on the cameras, please add it
  to the "print-camera-list" helper.


Client programmers (KDE, GNOME, MONO, C....) with specific character
set requirements:

   * We added new function gp_message_codeset(const char*) to API.
      - If you do not call this function, libgphoto2 will give you its
        messages in the codeset defined by the system locale.
	(The system locale is defined by the LANG, LANGUAGE, and LC_*
	environment variables.)
      - Call this function with your desired codeset if you require
        libgphoto2 messages in a fixed codeset independent from the
        system locale. For example, GTK+ applications always expect UTF-8.
      - gp_message_codeset() propagates the requested charset to
        libgphoto2_port and then calls gettext's bind_textdomain_codeset()
        function.

libgphoto2 changes:

   * Lots of bugs were fixed.

   * New translations were added.

Driver changes:

   * PTP

     - PTP/IP support has been added.

     - On selected Nikon and Canon cameras it is now possible to capture
       images into the Camera SDRAM and in turn downloading it to libgphoto2
       internal storage, bypassing the memory card.

       To enable it, use the "capturetarget" setting, also saved in
       .gphoto/settings.

       This is useful for:
	   gphoto2 --capture-image -f /store_00010001 -p capt0000.jpg

       Or use the timelapse capture of gphoto2: