@@ -1,7 +1,12 @@
-MCSFLAGS = --unsafe -g
+MCSFLAGS = -unsafe -debug
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = libgphoto2-sharp.pc
+
+LIBGPHOTO2_SHARP_GENERATED_CSFILES = \
+	AssemblyInfo.cs
 
 LIBGPHOTO2_SHARP_CSFILES =				\
-	$(srcdir)/AssemblyInfo.cs			\
 	$(srcdir)/Camera.cs				\
 	$(srcdir)/CameraAbilitiesList.cs		\
 	$(srcdir)/CameraFile.cs				\
@@ -15,18 +20,21 @@ LIBGPHOTO2_SHARP_CSFILES =				\
 	$(srcdir)/PortInfo.cs				\
 	$(srcdir)/PortInfoList.cs
 
-# FIXME: Where to install this?
+# FIXME: Where to install this, depending on gmcs/mcs and stuff?
 cslibdir = $(libdir)/$(PACKAGE_TARNAME)
-cslib_DATA =		\
+cslib_DATA =				\
 	libgphoto2-sharp.dll		\
-	libgphoto2-sharp.dll.config
+	libgphoto2-sharp.dll.config	\
+	libgphoto2-sharp.dll.mdb
 
-libgphoto2-sharp.dll: $(LIBGPHOTO2_SHARP_CSFILES)
-	$(MCS) $(MCSFLAGS) -o $@ /target:library $(LIBGPHOTO2_SHARP_CSFILES)
+libgphoto2-sharp.dll: $(LIBGPHOTO2_SHARP_GENERATED_CSFILES) $(LIBGPHOTO2_SHARP_CSFILES)
+	$(MCS) $(MCSFLAGS) -out:$@ /target:library $(LIBGPHOTO2_SHARP_GENERATED_CSFILES) $(LIBGPHOTO2_SHARP_CSFILES)
 
 EXTRA_DIST =							\
 	libgphoto2-sharp.dll.config				\
-	$(LIBGPHOTO2_SHARP_CSFILES)
+	libgphoto2-sharp.pc.in					\
+	$(LIBGPHOTO2_SHARP_CSFILES)				\
+	AssemblyInfo.cs.in
 
 CLEANFILES =							\
 	libgphoto2-sharp.dll.mdb				\
