@@ -1,0 +1,12 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+Libraries=@libdir@/libgphoto2/libgphoto2-sharp.dll
+
+Name: libgphoto2-sharp
+Description: libgphoto2-sharp - .NET Bindings for libgphoto2 in C#
+Version: @VERSION@
+Libs: -r:@libdir@/libgphoto2/libgphoto2-sharp.dll
+
+Index: bindings/csharp/AssemblyInfo.cs
